refactor: bring back org name in scss imports

--- a/packages/components/news/source/3-organisms/news-latest/news-latest.scss
+++ b/packages/components/news/source/3-organisms/news-latest/news-latest.scss
@@ -1,5 +1,5 @@
-@use 'base/source/0-base/1-tools/scss/grid';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/grid';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 
 .news-latest {
   @include grid.grid-container();
