--- a/packages/components/quotes/source/2-molecules/quote/quote.scss
+++ b/packages/components/quotes/source/2-molecules/quote/quote.scss
@@ -1,5 +1,5 @@
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 @use 'settings/quotes';
 
 .quote {
