--- a/packages/components/storytelling/source/2-molecules/storytelling/storytelling.scss
+++ b/packages/components/storytelling/source/2-molecules/storytelling/storytelling.scss
@@ -1,6 +1,6 @@
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/sizes';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/sizes';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 @use 'settings/base';
 @use 'settings/global';
 @use 'settings/storytelling';
