--- a/packages/components/visuals/source/2-molecules/visual-slider/_visual-slider.scss
+++ b/packages/components/visuals/source/2-molecules/visual-slider/_visual-slider.scss
@@ -1,6 +1,6 @@
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
-@use 'base/source/0-base/0-settings/selector';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/0-settings/selector';
 @use 'bourbon/core/bourbon';
 @use 'settings/visuals';
 
