--- a/packages/components/visuals/source/2-molecules/visual-slider/slide-preview/_visual-slide-preview.scss
+++ b/packages/components/visuals/source/2-molecules/visual-slider/slide-preview/_visual-slide-preview.scss
@@ -1,4 +1,4 @@
-@use 'base/source/0-base/0-settings/selector';
+@use '@kickstartds/base/source/0-base/0-settings/selector';
 @use 'settings/visuals';
 
 @keyframes slider-nav-autoplay {
