--- a/packages/components/visuals/source/2-molecules/visual/_visual__image.scss
+++ b/packages/components/visuals/source/2-molecules/visual/_visual__image.scss
@@ -1,6 +1,6 @@
 @use 'bourbon/core/bourbon';
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 @use 'settings/visuals';
 @use 'sass:meta';
 
