--- a/packages/components/news/source/2-molecules/news-list-item/news-list.scss
+++ b/packages/components/news/source/2-molecules/news-list-item/news-list.scss
@@ -1,6 +1,6 @@
-@use 'base/source/0-base/1-tools/scss/grid';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
-@use 'base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/grid';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
 @use 'settings/base';
 @use 'settings/news';
 @use 'sass:meta';
