--- a/packages/components/visuals/source/2-molecules/visual/_visual__content.scss
+++ b/packages/components/visuals/source/2-molecules/visual/_visual__content.scss
@@ -1,7 +1,7 @@
 @use 'bourbon/core/bourbon';
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/sizes';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/sizes';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 @use 'settings/global';
 @use 'settings/base';
 @use 'settings/visuals';
