--- a/packages/components/visuals/source/2-molecules/visual/visual.scss
+++ b/packages/components/visuals/source/2-molecules/visual/visual.scss
@@ -1,8 +1,8 @@
-@use 'base/source/0-base/0-settings/selector';
-@use 'base/source/0-base/1-tools/scss/grid';
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/sizes';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/0-settings/selector';
+@use '@kickstartds/base/source/0-base/1-tools/scss/grid';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/sizes';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
 @use 'settings/base';
 @use 'settings/global';
 @use 'settings/visuals';
