--- a/packages/components/visuals/source/4-templates/visuals/_visuals.scss
+++ b/packages/components/visuals/source/4-templates/visuals/_visuals.scss
@@ -1,7 +1,7 @@
-@use 'base/source/0-base/1-tools/scss/helpers';
-@use 'base/source/0-base/1-tools/scss/sizes';
-@use 'base/source/0-base/1-tools/scss/breakpoint';
-@use 'base/source/0-base/0-settings/selector';
+@use '@kickstartds/base/source/0-base/1-tools/scss/helpers';
+@use '@kickstartds/base/source/0-base/1-tools/scss/sizes';
+@use '@kickstartds/base/source/0-base/1-tools/scss/breakpoint';
+@use '@kickstartds/base/source/0-base/0-settings/selector';
 @use 'settings/visuals';
 
 .visual__box {
