chore: test chromatic PR integration

--- a/legacy-instance/settings/base/_colors.scss
+++ b/legacy-instance/settings/base/_colors.scss
@@ -1,5 +1,5 @@
 /// ## Brand Colors
-$color-brand:   #333333 !default; /* Main Brand Color */
+$color-brand:   #00FF00 !default; /* Main Brand Color */
 $color-brand-2: #999999 !default; /* Secondary Brand Color */
 $color-white:   #fff !default;
 $color-black:   mix(black, $color-brand, 90%) !default;
